tests/macros/multi_select/default.rs
fn main() {
    discourse::questions![MultiSelect { default: todo!() }];
}
